prevent history and user pages from scrolling entire page (reduced max height before overflow)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -167,7 +167,7 @@
 	#hist_scroll, #user_scroll{
 		overflow-y: auto;
 		width: auto;
-		max-height: 900px;
+		max-height: 600px;
 	}
 	/*
 	#user_scroll {
